# SYCL_test

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: macos-build-and-test.yml  ubuntu-build-and-test.yml
CMake/: FindComputeCpp.cmake
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
